--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "aiosqlite (>=0.21.0,<0.22.0)",
     "databases[sqlite] (>=0.9.0,<0.10.0)",
-    "email-validator (>=2.2.0,<3.0.0)"
+    "email-validator (>=2.2.0,<3.0.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "redis (>=6.2.0,<7.0.0)"
 ]
 
 
