--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,9 +20,13 @@ dependencies = [
     "email-validator (>=2.2.0,<3.0.0)",
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
-    "redis (>=6.2.0,<7.0.0)"
+    "redis (>=6.2.0,<7.0.0)",
+    "loguru (>=0.7.3,<0.8.0)"
 ]
 
+
+[tool.poetry]
+package-mode = false
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
