--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,4 +1,3 @@
-# Base stage with common dependencies
 FROM python:3.12-slim AS base
 
 # Set environment variables for development
@@ -28,11 +27,11 @@ ENV POETRY_NO_INTERACTION=1 \
     POETRY_VENV_IN_PROJECT=1 \
     POETRY_CACHE_DIR=/tmp/poetry_cache
 
-# Copy poetry files
+# Copy poetry files AND README
 COPY pyproject.toml poetry.lock* ./
 
 # Install dependencies
-RUN poetry install --with dev && rm -rf $POETRY_CACHE_DIR
+RUN poetry install --with dev --no-root && rm -rf $POETRY_CACHE_DIR
 
 # Install development dependencies
 RUN pip install \
