--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
     "python-jose[cryptography] (>=3.5.0,<4.0.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
     "redis (>=6.2.0,<7.0.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "langchain-anthropic (>=0.3.18,<0.4.0)",
+    "pyjwt (>=2.10.1,<3.0.0)"
 ]
 
 
