Refactor Docker and Poetry configurations for improved development setup
- Updated `.dockerignore` to exclude Markdown files and README for cleaner Docker builds.
- Modified `compose.dev.yaml` to enhance the development command using Poetry for dependency management and execution.
- Refactored `Dockerfile.dev` to optimize layer caching by copying Poetry files and README earlier, and adjusted the installation commands to utilize Poetry.
- Updated `pyproject.toml` to rename the project from "backend" to "app" and added new dependencies for `pydantic-settings` and `asyncpg`.
- Introduced a new `main.py` file for the FastAPI application, including basic health check and root endpoints.
- Updated `poetry.lock` to reflect new dependencies and their configurations for development.

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -22,35 +22,28 @@ FROM base AS development
 # Install Poetry
 RUN pip install poetry
 
-# Configure Poetry
+# Configure Poetry - Move these to after poetry install
 ENV POETRY_NO_INTERACTION=1 \
     POETRY_VENV_IN_PROJECT=1 \
     POETRY_CACHE_DIR=/tmp/poetry_cache
 
-# Copy poetry files AND README
+# Copy poetry files and README first for better layer caching
 COPY pyproject.toml poetry.lock* ./
+COPY README.md ./
 
-# Install dependencies
-RUN poetry install --with dev --no-root && rm -rf $POETRY_CACHE_DIR
-
-# Install development dependencies
-RUN pip install \
-    pytest==8.4.1 \
-    pytest-asyncio==1.1.0 \
-    black==25.1.0 \
-    isort==6.0.1 \
-    mypy==1.17.0 \
-    watchfiles \
-    debugpy
-
-# Copy application code
-COPY . .
+# Install dependencies (including dev dependencies)
+RUN poetry config virtualenvs.in-project true && \
+    poetry install --with dev --no-root && \
+    rm -rf $POETRY_CACHE_DIR
 
 # Create directories for logs and data
 RUN mkdir -p /app/logs /app/data
+
+# Copy application code
+COPY . .
 
 # Expose ports
 EXPOSE 8000 5678
 
 # Development command with hot reloading
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--reload-dir", "/app/app"]
+CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--reload-dir", "/app/app"]
