--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "backend"
+name = "app"
 version = "0.1.0"
 description = "infinity backend"
 authors = [
@@ -23,12 +23,15 @@ dependencies = [
     "redis (>=6.2.0,<7.0.0)",
     "loguru (>=0.7.3,<0.8.0)",
     "langchain-anthropic (>=0.3.18,<0.4.0)",
-    "pyjwt (>=2.10.1,<3.0.0)"
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)"
 ]
 
-
 [tool.poetry]
-package-mode = false
+packages = [
+    {include = "app"}
+]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -40,4 +43,6 @@ pytest-asyncio = "^1.1.0"
 black = "^25.1.0"
 isort = "^6.0.1"
 mypy = "^1.17.0"
+watchfiles = "^1.1.0"
+debugpy = "^1.8.16"
 
