Update dependencies in poetry.lock and pyproject.toml for Jupyter and development tools
- Added Jupyter-related packages including `jupyter`, `jupyterlab`, `ipykernel`, and `notebook` to enhance the development environment for Jupyter notebooks.
- Updated `poetry.lock` to reflect the new dependencies and their configurations, ensuring a consistent development setup.
- Included various new development dependencies to support improved functionality and testing capabilities.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -45,4 +45,8 @@ isort = "^6.0.1"
 mypy = "^1.17.0"
 watchfiles = "^1.1.0"
 debugpy = "^1.8.16"
+jupyter = "^1.0.0"
+jupyterlab = "^4.0.0"
+ipykernel = "^6.29.0"
+notebook = "^7.0.0"
 
