Add pytest coverage configuration and enhance test settings

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,3 +1,36 @@
 [pytest]
 testpaths = tests
-addopts = --maxfail=1 --disable-warnings -q
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+addopts =
+    --strict-markers
+    --disable-warnings
+    --tb=short
+    -v
+
+markers =
+    asyncio: marks tests as async (deselect with '-m "not asyncio"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
+    slow: marks tests as slow running
+
+asyncio_mode = auto
+
+# Coverage settings
+[coverage:run]
+source = app
+omit =
+    */tests/*
+    */migrations/*
+    */__pycache__/*
+    */venv/*
+    */.venv/*
+
+[coverage:report]
+precision = 2
+show_missing = True
+skip_covered = False
+
+[coverage:html]
+directory = htmlcov
