--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,6 +40,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
 pytest-asyncio = "^1.1.0"
+pytest-cov = "^6.0.0"
+httpx = "^0.28.1"
 black = "^25.1.0"
 isort = "^6.0.1"
 mypy = "^1.17.0"
