Update cSpell configuration to include 'autoflush' and 'sessionmaker'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,10 @@
     "java.configuration.updateBuildConfiguration": "interactive",
     "python-envs.pythonProjects": [],
     "cSpell.words": [
+        "autoflush",
         "ilike",
         "onupdate",
-        "prefs"
+        "prefs",
+        "sessionmaker"
     ]
 }
